# Algorithmic-Trading-System-Template

./: .gitignore  LICENSE  README.md  System_Design_Document.md  WBS.md  init_project.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  status.py  verify_setup.py
config/: .env.template  config.yaml
scripts/: demo_backtesting.py  demo_data_management.py  demo_oms_simple.py  demo_order_management.py  demo_screening_engine.py  demo_strategies.py  test_screening_engine.py
scripts/data_download/: download_historical.py
src/: __init__.py  config_manager.py
src/backtesting/: __init__.py  backtesting_engine.py  data_handler.py  performance_analyzer.py  portfolio_simulator.py  trade_simulator.py
src/data_management/: __init__.py  data_core.py  historical_provider.py  realtime_provider.py
src/monitoring/: __init__.py
src/order_management/: __init__.py  broker_interface.py  execution_engine.py  order_manager.py  position_manager.py  risk_controls.py
src/risk_management/: __init__.py
src/screening/: __init__.py  filters.py  mean_reversion_scanner.py  pairs_scanner.py  universe.py
src/strategies/: __init__.py  base_strategy.py  mean_reversion_strategy.py  pairs_trading_strategy.py
tests/: test_config_manager.py  test_realtime_provider.py
